fix: font width/stretch for latest version of fonts

--- a/packages/stylesheets/core/scss/design/typography/_typography-legacy.scss
+++ b/packages/stylesheets/core/scss/design/typography/_typography-legacy.scss
@@ -9,7 +9,6 @@ body {
   -webkit-font-smoothing: antialiased;
   font-weight: $dc-font-weight-regular;
   line-height: $dc-line-height-base;
-  font-variation-settings: 'wdth' 0;
 }
 
 // Headings
